# zote

./: Cargo.toml  README.md  ideas.md
.github/workflows/: rust.yml
aoc-2022/: day01.zote  day02.zote  day03.zote  day04.zote  day05.zote  day06.zote  day07.zote  day08.zote  day09.zote  day10.zote  day11.zote  day12.zote  day16.zote  day17.zote  day22.zote  day23.zote  day24.zote  day25.zote
aoc-2022/ast-solutions/: day01.zote  day02.zote  day04.zote  day06.zote  day07.zote  day08.zote  day09.zote  day10.zote  day11.zote  (+13 more)
ast_interpreter/: Cargo.toml
benches/: ast.rs  vm.rs
docs/: book.toml
examples/: fib
parser/: Cargo.toml
semantic_analyzer/: Cargo.toml
src/: ast-main.rs  code_loc.rs  errors.rs  interpreter.rs  lib.rs  main.rs  parser.rs  scanner.rs  vm-main.rs
tests/: ast-interpreter-tests.rs  tests.rs  vm-aoc-tests.rs  vm-interpreter-tests.rs
vm/: Cargo.toml  ideas.md  stdlib.zote  test.zote  test2.zote
vm/enum_macros/src/: lib.rs
vm/enum_macros/tests/: tests.rs
vm/src/: compiler.rs  disassembler.rs  error.rs  interpreter.rs  lib.rs  main.rs  value.rs
vm/src/compiler/: ast_compiler.rs  bytecode.rs  chunk.rs  code_gen.rs  control_flow.rs  locals.rs
vm/src/compiler/ast_compiler/: control_flow.rs
vm/src/compiler/code_gen/: conditionals.rs  function.rs
vm/src/interpreter/: call_frame.rs  caller.rs  cmp_ops.rs  logic_ops.rs  num_ops.rs
vm/src/value/: builtins.rs  closure.rs  dictionary.rs  function.rs  list.rs  priority_queue.rs  string.rs  value_pointer.rs
vm/src/value/builtins/: natives.rs  templates.rs
vm/tests/: bytecode.rs
(+144 files in other folders)
