[package]
name = "vm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_macros = { path = "enum_macros" }
itertools = "0.11.0"
parser = { path = "../parser" }
rand = "0.8.5"
semantic_analyzer = { path = "../semantic_analyzer" }
serde_json = "1.0.145"
